BJS2-41262: Review fix